Quic Integration (#1049)
Adds QUIC functionality to TLS-Attacker

---------

Co-authored-by: Patrick <patrick.weixler@gmail.com>
Co-authored-by: mmaehren <32199075+mmaehren@users.noreply.github.com>
Co-authored-by: JonSnowWhite <nniklas@mail.upb.de>